--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,10 @@ jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION}
 
 spring.jackson.date-format=${DATE_FORMAT}
 spring.jackson.time-zone=${TIME_ZONE}
+
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
